--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-streamlit==1.28.2
-pandas==2.0.3
-numpy==1.24.3
-plotly==5.17.0
-yfinance==0.2.31
-scipy==1.11.3
-pytz==2023.3
-requests==2.31.0
-python-dateutil==2.8.2
+streamlit
+pandas
+numpy
+plotly
+yfinance
+scipy
+pytz
+requests
+python-dateutil
